syntax = "proto3";
option go_package = "github.com/rancher/opni/plugins/metrics/pkg/apis/node";

import "google/protobuf/empty.proto";

service NodeMetricsCapability {
  rpc Sync(SyncRequest) returns (SyncResponse);
}

message MetricsCapabilityConfig {
  bool enabled = 1;
  // TODO: add config options for metrics capability here
}

message MetricsCapabilityStatus {
  optional string error = 1;
  repeated string conditions = 2;
}

message SyncRequest {
  MetricsCapabilityConfig currentConfig = 1;
  MetricsCapabilityStatus currentStatus = 2;
}

enum ConfigStatus {
  Unknown = 0;
  UpToDate = 1;
  NeedsUpdate = 2;
}

message SyncResponse {
  ConfigStatus configStatus = 1;
  MetricsCapabilityConfig updatedConfig = 2;
}